<ScrollView android:id="@+id/fragment_about_scrollview"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center|top"
        >

        <ImageView
            android:id="@+id/activity_about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rigado_logo"
            app:srcCompat="@drawable/rigado_logo_blue"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            />

        <TextView
            android:id="@+id/activity_about_main_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_paragraph_one"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:textIsSelectable="true"
            />

        <TextView
            android:id="@+id/activity_about_secondary_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_paragraph_two"
            android:gravity="center"
            android:textIsSelectable="true"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            />

        <TextView
            android:id="@+id/activity_about_tertiary_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_paragraph_three"
            android:gravity="center"
            android:textIsSelectable="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            />

        <TextView
            android:id="@+id/activity_about_phone_number"
            android:text="@string/link_phone_number"
            android:autoLink="phone"
            android:textIsSelectable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            />

        <TextView
            android:id="@+id/activity_about_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/link_email"
            android:textIsSelectable="true"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            />

        <TextView
            android:id="@+id/activity_about_support_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/link_support_email"
            android:textIsSelectable="true"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            />

        <TextView
            android:id="@+id/activity_about_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/link_website"
            android:textIsSelectable="true"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            />

        <TextView
            android:id="@+id/fragment_about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textIsSelectable="true"
            />

    </LinearLayout>
</ScrollView>