<RelativeLayout
    android:id="@+id/background_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- IMAGES: Ambient light, User1, User2 -->
    <RelativeLayout
        android:id="@+id/layout_user_feedback_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="16dp"
        >

        <View
            android:id="@+id/view_ambient"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_square_ambient"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <View
            android:id="@+id/view_ambient_background"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_ambient_background"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/tv_user1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_green_rectangle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/label_button_one"
            android:textColor="@android:color/white"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_user2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/shape_green_rectangle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/label_button_two"
            android:textColor="@android:color/white"
            android:gravity="center"/>

    </RelativeLayout>

    <!-- TEXT: Ambient Light, mV -->
    <LinearLayout
        android:id="@+id/layout_user_feedback_labels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_user_feedback_images"
        android:layout_marginStart="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_ambient_light"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:id="@+id/textview_ambient_millivolt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 mV"
            />

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_user_feedback_labels"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        />

</RelativeLayout>
